--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "description": "An extendable drop-in replacement for the native MediaRecorder.",
   "devDependencies": {
+    "@angular/compiler": "^2.2.3",
     "babel-preset-es2015": "^6.18.0",
     "chai": "^3.5.0",
     "eslint-config-holy-grail": "^16.0.0",
