--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "src/"
   ],
   "homepage": "https://github.com/chrisguttandin/extendable-media-recorder",
-  "jsnext:main": "build/es2015/module.js",
   "keywords": [
     "audio",
     "browser",
@@ -61,6 +60,7 @@
   ],
   "license": "MIT",
   "main": "build/es5/bundle.js",
+  "module": "build/es2015/module.js",
   "name": "extendable-media-recorder",
   "repository": {
     "type": "git",
