export esm files

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "files": [
     "build/es5/",
     "build/es2015/",
+    "build/esm/",
     "src/"
   ],
   "homepage": "https://github.com/chrisguttandin/extendable-media-recorder",
@@ -60,7 +61,7 @@
   ],
   "license": "MIT",
   "main": "build/es5/bundle.js",
-  "module": "build/es2015/module.js",
+  "module": "build/esm/module.js",
   "name": "extendable-media-recorder",
   "repository": {
     "type": "git",
