--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-runtime": "^6.26.0",
     "core-js": "^2.5.1",
     "rxjs": "^5.4.3",
+    "tslib": "^1.7.1",
     "zone.js": "^0.8.17"
   },
   "description": "An extendable drop-in replacement for the native MediaRecorder.",
