build(package): update config property

--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "bugs": {
     "url": "https://github.com/chrisguttandin/extendable-media-recorder/issues"
   },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
   "dependencies": {
     "@angular/core": "^5.2.7",
     "babel-runtime": "^6.26.0",
@@ -56,16 +61,16 @@
     "webpack": "^4.1.0"
   },
   "files": [
-    "build/es5/",
     "build/es2015/",
+    "build/es5/",
     "build/esm/",
     "src/"
   ],
   "homepage": "https://github.com/chrisguttandin/extendable-media-recorder",
   "keywords": [
+    "Web Audio API",
     "audio",
-    "browser",
-    "Web Audio API"
+    "browser"
   ],
   "license": "MIT",
   "main": "build/es5/bundle.js",
