--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "url": "https://github.com/chrisguttandin/extendable-media-recorder.git"
   },
   "scripts": {
+    "commitmsg": "commitlint --edit --extends @commitlint/config-angular",
     "precommit": "grunt lint",
     "prepublishOnly": "grunt build",
     "test": "grunt lint && grunt test"
