--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "rxjs": "^5.5.7",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.8.20"
+    "tslib": "^1.9.0"
   },
   "description": "An extendable drop-in replacement for the native MediaRecorder.",
   "devDependencies": {
