--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "grunt-karma": "^2.0.0",
     "grunt-sh": "^0.2.0",
     "grunt-tslint": "^5.0.2",
-    "gruntify-eslint": "github:chrisguttandin/gruntify-eslint",
+    "gruntify-eslint": "^5.0.0",
     "husky": "^0.14.3",
     "karma": "^2.0.4",
     "karma-browserstack-launcher": "^1.3.0",
