--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "description": "An extendable drop-in replacement for the native MediaRecorder.",
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-angular": "^7.0.1",
-    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "chai": "^4.1.2",
