--- a/package.json
+++ b/package.json
@@ -58,9 +58,8 @@
     "webpack": "^4.20.2"
   },
   "files": [
-    "build/es2015/",
+    "build/es2018/",
     "build/es5/",
-    "build/esm/",
     "src/"
   ],
   "homepage": "https://github.com/chrisguttandin/extendable-media-recorder",
@@ -77,7 +76,7 @@
   ],
   "license": "MIT",
   "main": "build/es5/bundle.js",
-  "module": "build/esm/module.js",
+  "module": "build/es2018/module.js",
   "name": "extendable-media-recorder",
   "repository": {
     "type": "git",
@@ -87,6 +86,6 @@
     "prepublishOnly": "grunt build",
     "test": "grunt lint && grunt test"
   },
-  "types": "build/es2015/module.d.ts",
+  "types": "build/es2018/module.d.ts",
   "version": "1.1.13"
 }
