fix(package): install standardized-audio-context as regular dependency

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
+    "standardized-audio-context": "^17.0.5",
     "tslib": "^1.9.3"
   },
   "description": "An extendable drop-in replacement for the native MediaRecorder.",
