--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.1.5",
     "extendable-media-recorder-wav-encoder-broker": "^4.0.4",
+    "media-encoder-host": "^4.0.6",
     "standardized-audio-context": "^17.0.5",
     "tslib": "^1.9.3"
   },
