--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.12.0",
     "eslint-config-holy-grail": "^33.0.2",
+    "extendable-media-recorder-wav-encoder": "^4.0.14",
     "grunt": "^1.0.3",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-clean": "^2.0.0",
