--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "extendable-media-recorder-wav-encoder-broker": "^4.0.28",
+    "extendable-media-recorder-wav-encoder-worker": "^6.0.0",
     "media-encoder-host": "^4.0.35",
     "recorder-audio-worklet": "^4.0.21",
     "standardized-audio-context": "^21.1.1",
@@ -27,7 +28,7 @@
     "chai": "^4.2.0",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
-    "eslint": "^6.2.2",
+    "eslint": "^6.3.0",
     "eslint-config-holy-grail": "^39.0.0",
     "extendable-media-recorder-wav-encoder": "^4.0.34",
     "grunt": "^1.0.4",
