--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@babel/preset-env": "^7.11.5",
         "@commitlint/cli": "^11.0.0",
         "@commitlint/config-angular": "^11.0.0",
+        "@rollup/plugin-babel": "^5.2.1",
         "chai": "^4.2.0",
         "commitizen": "^4.2.1",
         "cz-conventional-changelog": "^3.3.0",
