--- a/package.json
+++ b/package.json
@@ -67,12 +67,6 @@
         "src/"
     ],
     "homepage": "https://github.com/chrisguttandin/extendable-media-recorder",
-    "husky": {
-        "hooks": {
-            "commit-msg": "commitlint --edit --extends @commitlint/config-angular",
-            "pre-commit": "pretty-quick --config config/prettier/config.json --staged && grunt lint"
-        }
-    },
     "keywords": [
         "Web Audio API",
         "audio",
@@ -87,6 +81,7 @@
         "url": "https://github.com/chrisguttandin/extendable-media-recorder.git"
     },
     "scripts": {
+        "prepare": "husky install",
         "prepublishOnly": "grunt build",
         "test": "grunt lint && grunt test"
     },
