fix(package): add contributors property

--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
             "path": "cz-conventional-changelog"
         }
     },
+    "contributors": [
+        {
+            "email": "alex.maclean2000@gmail.com",
+            "name": "Alex MacLean"
+        }
+    ],
     "dependencies": {
         "@babel/runtime": "^7.17.9",
         "media-encoder-host": "^8.0.70",
